Educators and Learners functionalities

--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lexical/react": "^0.38.1",
+    "@lexical/rich-text": "^0.38.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.2.1",
+    "@stripe/stripe-js": "^8.2.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
+    "@tiptap/extension-image": "^3.9.0",
+    "@tiptap/extension-link": "^3.9.0",
+    "@tiptap/extension-youtube": "^3.9.0",
+    "@tiptap/react": "^3.9.0",
+    "@tiptap/starter-kit": "^3.9.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lexical": "^0.38.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "recharts": "^3.3.0",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
