--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "googleapis": "^164.1.0",
     "lexical": "^0.38.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
