Fixed lot of bugs and Calendar implementation

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lexical/react": "^0.38.1",
     "@lexical/rich-text": "^0.38.1",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.2.1",
     "@stripe/stripe-js": "^8.2.0",
@@ -24,6 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
     "lexical": "^0.38.1",
