--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "recharts": "^3.3.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
